--- a/src/main/resources/templates/member/memberJoin.html
+++ b/src/main/resources/templates/member/memberJoin.html
@@ -19,16 +19,18 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function () {
+            let checkForm ;
 
             //아이디 중복체크(Ajax), 정규식 체크
 
-            /* $('#id').on('keyup', function () {
+             $('#id').on('blur', function () {
                  var regExpId = /^[a-z]+[a-z0-9]{5,19}$/g;
                  var idVal = $('#id').val();
 
                  if (!regExpId.test(idVal)) {
                      $('#idHelp p').text('영문으로 시작하는 6~20자 영문 또는 숫자이어야 합니다.');
-                     empty = false;
+                     checkForm = false;
+                     console.log('idFalse:',checkForm);
                      return false;
                  } else {
                      $.ajax({
@@ -40,10 +42,14 @@
                          success: function (data) {
                              if (idVal === data) {
                                  $('#idHelp p').text('중복된 id 입니다.');
-                                 empty = false;
+                                 checkForm = false;
+                                 console.log('idFalse:',checkForm);
                                  return false;
                              } else {
                                  $('#idHelp p').text("사용 가능합니다");
+                                 checkForm = true;
+                                 console.log('idTrue:',checkForm);
+
                              }
 
                          }
@@ -52,30 +58,34 @@
              });
 
              //비밀번호 정규식 체크
-             $('#pw').on('keyup', function () {
+             $('#pw').on('blur', function () {
                  var regExpPw = /^(?=.*\d{1,50})(?=.*[~`!@#$%\^&*()-+=]{1,50})(?=.*[a-zA-Z]{2,50}).{8,50}$/;
 
                  if (!regExpPw.test($('#pw').val())) {
                      $('#pwHelp p').text('8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요.');
-                     empty = false;
+                     checkForm = false;
+                     console.log('pwFalse:',checkForm);
                      return false;
                  } else {
                      $('#pwHelp p').text('사용가능한 비밀번호입니다.');
+                     checkForm = true;
+                     console.log('pwTrue:',checkForm);
                  }
-             });*/
+             });
 
             //비밀번호 일치 확인
-            var empty = true;
-            var pwCheck = $('#pw2').on('blur', function () {
+
+            $('#pw2').on('blur', function () {
                 if ($('#pw').val() !== $('#pw2').val()) {
                     $('#pw2Help p').text('비밀번호가 일치하지 않습니다.');
-                    empty = false;
-                    console.log(empty);
-                    return empty;
+                    checkForm = false;
+                    console.log('pw2False:',checkForm);
+                    return false;
                 } else {
                     $('#pw2Help p').text('');
-                    console.log(empty);
-                    return empty;
+                    checkForm = true;
+                    console.log('pw2True:',checkForm);
+
                 }
 
             });
@@ -87,10 +97,13 @@
 
                 if (!regExpPw.test($('#phone').val())) {
                     $('#phoneHelp p').text('올바른 핸드폰번호가 아닙니다.');
-                    empty = false;
+                    checkForm = false;
+                    console.log('phoneFalse:',checkForm);
                     return false;
                 } else {
                     $('#phoneHelp p').text('');
+                    checkForm = true;
+                    console.log('phoneTrue:',checkForm);
                 }
             });
             //이메일 체크
@@ -99,34 +112,47 @@
 
                 if (!regExpEmail.test($('#email').val())) {
                     $('#emailHelp p').text('올바른 이메일이 아닙니다.');
-                    empty = false;
+                    checkForm = false;
+                    console.log('emailFalse:',checkForm);
                     return false;
                 } else {
                     $('#emailHelp p').text('');
+                    checkForm = true;
+                    console.log('emailTrue:',checkForm);
                 }
             });
 
             //폼태그가 정상적으로 입력 되어있으면 가입
 
-            $('#join').on('click', function () {
+            $('#join').on('click mouseover', function () {
                 var inputs = $('.inputs');
-                var check = true;
+                var joinCheck;
                 for (var i = 0; i < inputs.length; i++) {
                     var input = inputs[i];
                     var val = input.value;
                     if (val === '') {
                         input.focus();
                         alert(input.getAttribute('id') + '은 필수 입력사항입니다.');
-                        check = false;
+                        joinCheck = false;
                         return false;
-
                     }
-
-                    console.log(val);
+                    joinCheck = true;
+                    //console.log(val);
+                    console.log('joinCheck1 :',joinCheck);
+                    console.log('checkForm1 :',checkForm);
                 }
-                $('#form').submit();
+                console.log('joinCheck2 :',joinCheck);
+                console.log('checkForm2 :',checkForm);
+
+                if(!checkForm && !joinCheck) return ;
+
+                console.log("????????????")
+
+                //$('#form').submit();
 
             })
+            //디바운스 , checkform=true를 keyup안에 넣어야하지않나여? , 키업이 아닌 중복확인 버튼 클릭시로 변경하셔도되고요
+            //마지막이 트루에셔 다 트루가 되는거 같은데..........................어떻게 해결하지...............
 
 
 
