--- a/src/main/resources/templates/member/memberJoin.html
+++ b/src/main/resources/templates/member/memberJoin.html
@@ -20,62 +20,77 @@
     <script>
         $(document).ready(function () {
 
+            var checkId;
+            var checkPw;
+            var checkPw2;
+            var checkPhone;
+            var checkEmail;
+
             //아이디 중복체크(Ajax), 정규식 체크
 
-            /* $('#id').on('keyup', function () {
-                 var regExpId = /^[a-z]+[a-z0-9]{5,19}$/g;
-                 var idVal = $('#id').val();
+            $('#id').on('blur', function () {
+                var regExpId = /^[a-z]+[a-z0-9]{5,19}$/g;
+                var idVal = $('#id').val();
 
-                 if (!regExpId.test(idVal)) {
-                     $('#idHelp p').text('영문으로 시작하는 6~20자 영문 또는 숫자이어야 합니다.');
-                     empty = false;
-                     return false;
-                 } else {
-                     $.ajax({
-                         url: 'idCheck',
-                         type: 'POST',
-                         data: {
-                             'id': idVal
-                         },
-                         success: function (data) {
-                             if (idVal === data) {
-                                 $('#idHelp p').text('중복된 id 입니다.');
-                                 empty = false;
-                                 return false;
-                             } else {
-                                 $('#idHelp p').text("사용 가능합니다");
-                             }
+                if (!regExpId.test(idVal)) {
+                    $('#idHelp p').text('영문으로 시작하는 6~20자 영문 또는 숫자이어야 합니다.');
+                    checkId = false;
+                    console.log('idFalse:', checkForm);
+                    return false;
+                } else {
+                    $.ajax({
+                        url: 'idCheck',
+                        type: 'POST',
+                        data: {
+                            'id': idVal
+                        },
+                        success: function (data) {
+                            if (idVal === data) {
+                                $('#idHelp p').text('중복된 id 입니다.');
+                                checkId =  false;
+                                console.log('idFalse:', checkForm);
+                                return false;
+                            } else {
+                                $('#idHelp p').text("사용 가능합니다");
+                                checkId =  true;
+                                console.log('idTrue:', checkForm);
 
-                         }
-                     })
-                 }
-             });
+                            }
 
-             //비밀번호 정규식 체크
-             $('#pw').on('keyup', function () {
-                 var regExpPw = /^(?=.*\d{1,50})(?=.*[~`!@#$%\^&*()-+=]{1,50})(?=.*[a-zA-Z]{2,50}).{8,50}$/;
+                        }
+                    })
+                }
+            });
 
-                 if (!regExpPw.test($('#pw').val())) {
-                     $('#pwHelp p').text('8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요.');
-                     empty = false;
-                     return false;
-                 } else {
-                     $('#pwHelp p').text('사용가능한 비밀번호입니다.');
-                 }
-             });*/
+            //비밀번호 정규식 체크
+            $('#pw').on('blur', function () {
+                var regExpPw = /^(?=.*\d{1,50})(?=.*[~`!@#$%\^&*()-+=]{1,50})(?=.*[a-zA-Z]{2,50}).{8,50}$/;
+
+                if (!regExpPw.test($('#pw').val())) {
+                    $('#pwHelp p').text('8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요.');
+                    checkPw =  false;
+                    console.log('pwFalse:', checkForm);
+                    return false;
+                } else {
+                    $('#pwHelp p').text('사용가능한 비밀번호입니다.');
+                    checkPw =  true;
+                    console.log('pwTrue:', checkForm);
+                }
+            });
 
             //비밀번호 일치 확인
-            var empty = true;
-            var pwCheck = $('#pw2').on('blur', function () {
+
+            $('#pw2').on('blur', function () {
                 if ($('#pw').val() !== $('#pw2').val()) {
                     $('#pw2Help p').text('비밀번호가 일치하지 않습니다.');
-                    empty = false;
-                    console.log(empty);
-                    return empty;
+                    checkPw2 =  false;
+                    console.log('pw2False:', checkForm);
+                    return false;
                 } else {
                     $('#pw2Help p').text('');
-                    console.log(empty);
-                    return empty;
+                    checkPw2 =  true;
+                    console.log('pw2True:', checkForm);
+
                 }
 
             });
@@ -87,10 +102,13 @@
 
                 if (!regExpPw.test($('#phone').val())) {
                     $('#phoneHelp p').text('올바른 핸드폰번호가 아닙니다.');
-                    empty = false;
+                    checkPhone =  false;
+                    console.log('phoneFalse:', checkForm);
                     return false;
                 } else {
                     $('#phoneHelp p').text('');
+                    checkPhone =  true;
+                    console.log('phoneTrue:', checkForm);
                 }
             });
             //이메일 체크
@@ -99,10 +117,13 @@
 
                 if (!regExpEmail.test($('#email').val())) {
                     $('#emailHelp p').text('올바른 이메일이 아닙니다.');
-                    empty = false;
+                    checkEmail =  false;
+                    console.log('emailFalse:', checkForm);
                     return false;
                 } else {
                     $('#emailHelp p').text('');
+                    checkEmail =  true;
+                    console.log('emailTrue:', checkForm);
                 }
             });
 
@@ -110,26 +131,45 @@
 
             $('#join').on('click', function () {
                 var inputs = $('.inputs');
-                var check = true;
+                var checkJoin = true;
                 for (var i = 0; i < inputs.length; i++) {
                     var input = inputs[i];
                     var val = input.value;
                     if (val === '') {
                         input.focus();
                         alert(input.getAttribute('id') + '은 필수 입력사항입니다.');
-                        check = false;
+                        checkJoin = checkJoin && false;
                         return false;
-
                     }
+                    checkJoin = checkJoin && true;
+                    //console.log(val);
 
-                    console.log(val);
+
                 }
-                $('#form').submit();
+                console.log('joinCheck2 :', checkJoin);
+                console.log('checkId :', checkId);
+                console.log('checkPw :', checkPw);
+                console.log('checkPw2 :', checkPw2);
+                console.log('checkPhone :', checkPhone);
+                console.log('checkEmail :', checkEmail);
+
+
+
+                if (checkJoin && checkEmail && checkId && checkPhone && checkPw && checkPw2) {
+                    console.log("!!!!!!!!!!!!");
+                    $('#form').submit();
+                    return ;
+                }
+
+                alert('잘 못 입력한 곳이 있습니다.');
+                console.log("????????????")
+
+
+
 
             })
-
-
-
+            //디바운스 , checkform=true를 keyup안에 넣어야하지않나여? , 키업이 아닌 중복확인 버튼 클릭시로 변경하셔도되고요
+            //마지막이 트루에셔 다 트루가 되는거 같은데..........................어떻게 해결하지...............
 
 
             //console.log(check);
